# zhanga

.git_copy/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git_copy/logs/: HEAD
.git_copy/logs/refs/heads/: master  master_copy
.git_copy/logs/refs/remotes/origin/: HEAD  master  master_copy
.git_copy/objects/pack/: pack-3058b6a330373e33c0181445e56263db84255702.idx  pack-3058b6a330373e33c0181445e56263db84255702.pack
.git_copy/refs/remotes/origin/: master  master_copy
import_export/mysite/blogapp/: urls.py  views.py
import_export/mysite/blogapp/migrations/: 0001_initial.py
import_export/mysite/blogapp/templates/blogapp/: article_list.html
import_export/mysite/myauth/templates/myauth/: about-me.html
import_export/mysite/mysite/: settings.py  urls.py
import_export/mysite/shopapp/: admin.py  devices.csv  urls.py  views.py
import_export/mysite/shopapp/fixtures/: products-fixture.json  products-fixture.xml
import_export/mysite/shopapp/templates/shopapp/: products-list.html  products_changelist.html  shop-index.html  user_orders.html
prod/: Dockerfile  docker-compose.yaml  pyproject.toml  t.py
prod/mysite/mysite/: settings.py
