[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["Artyom Lagunkov <artem.lagunkov@gs-labs.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.0"
djangorestframework = "^3.14.0"
django-filter = "^23.5"
django-debug-toolbar = "^4.3.0"
pillow = "^10.2.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
